--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,17 @@
 remote_theme: pages-themes/dinky@v0.2.0
 plugins:
   - jekyll-remote-theme
+
+title: huginn
+description: Research & MSc Application Materials
+
+github:
+  is_project_page: false
+
+navigation:
+  - title: Home
+    url: /
+  - title: Research Output
+    url: /Research-Output/
+  - title: MSc Application Materials
+    url: /MSc-Application/
